added video-fashion section

--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -28,6 +28,7 @@ $bg: #f6f6f6;
   text-transform: uppercase;
   color: #fff;
   padding: 12px 26px;
+  letter-spacing: 1.2px;
   @extend %roboto-400;
   box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
 }
