--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -376,24 +376,24 @@
   &__title {
     text-align: left;
   }
-  &__text{
+  &__text {
     margin-bottom: 55px;
   }
-  &__link{
+  &__link {
     @extend %btn;
   }
 }
 
-.product{
+.product {
   padding: 105px 0 120px;
   background-color: #fff;
   text-align: center;
-  &__items{
+  &__items {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 45px 30px;
   }
-  &__link{
+  &__link {
     text-transform: uppercase;
     letter-spacing: 1.2px;
     color: $title;
@@ -404,16 +404,16 @@
   }
 }
 
-.product-item{
+.product-item {
   max-width: 370px;
-  &__img-box{
+  &__img-box {
     position: relative;
     height: 370px;
     overflow: hidden;
     margin-bottom: 25px;
   }
-  &__link-box{
-    transition: all .3s;
+  &__link-box {
+    transition: all 0.3s;
     position: absolute;
     left: 0;
     right: 0;
@@ -431,61 +431,61 @@
     transform: translateY(300%);
   }
   &__link--line::before,
-  &__link--line::after{
-    content: '';
+  &__link--line::after {
+    content: "";
     position: absolute;
     width: 1px;
     height: 30px;
     background-color: #ececec;
     top: 10px;
   }
-  &__link--line::before{
+  &__link--line::before {
     left: 70px;
   }
-  &__link--line::after{
+  &__link--line::after {
     right: 70px;
   }
-  &__link{
+  &__link {
     display: inherit;
-    path{
-      transition: all .3s;
+    path {
+      transition: all 0.3s;
     }
   }
-  &__link:hover{
-    path{
+  &__link:hover {
+    path {
       fill: $accent;
     }
   }
-  &__images{
+  &__images {
     object-fit: cover;
   }
-  &:hover{
-    .product-item__link-box{
+  &:hover {
+    .product-item__link-box {
       transform: translateY(0);
     }
   }
-  &__title{
+  &__title {
     color: $title;
     font-size: 22px;
     padding: 15px 0 20px;
   }
-  &__price{
+  &__price {
     display: flex;
     justify-content: center;
     @extend %roboto-400;
     font-size: 18px;
   }
-  &__new-price{
+  &__new-price {
     padding: 0 12px;
     color: $title;
   }
-  &__old-price{
+  &__old-price {
     padding: 0 12px;
     text-decoration: line-through;
   }
-  &--sale{
-    .product-item__img-box::before{
-      content: 'SALE';
+  &--sale {
+    .product-item__img-box::before {
+      content: "SALE";
       @extend %btn;
       padding: 2px 5px;
       position: absolute;
@@ -494,33 +494,33 @@
     }
   }
 }
-.star{
+.star {
   margin: 0 auto;
 }
-.promo{
-  background-image: url('../images/promo-bg.jpg');
+.promo {
+  background-image: url("../images/promo-bg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top center;
   padding: 150px 0 160px;
   text-align: center;
-  &__inner{
+  &__inner {
     max-width: 570px;
     width: 100%;
     margin-left: auto;
   }
-  &__subtitle{
+  &__subtitle {
     color: $accent;
     text-transform: uppercase;
     margin-bottom: 10px;
     font-size: 22px;
   }
-  &__clock{
+  &__clock {
     display: flex;
     justify-content: space-between;
     margin-top: 55px;
   }
-  &__clock-item{
+  &__clock-item {
     background-color: #fff;
     border-radius: 50%;
     height: 120px;
@@ -529,14 +529,15 @@
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    span{
+    box-shadow: 0px 10px 40px 0px rgba(187, 187, 187, 0.3);
+    span {
       font-size: 48px;
       @extend %roboto-700;
       margin: 10px 0 7px;
       color: $title;
     }
   }
-  &__link{
+  &__link {
     text-transform: uppercase;
     letter-spacing: 1.2px;
     color: $title;
@@ -546,17 +547,103 @@
     margin-top: 55px;
   }
 }
-.partners{
+.partners {
   padding-top: 75px;
-  &__list{
+  &__list {
     height: 170px;
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
 }
-
+.blog {
+  padding: 50px 0 160px;
+  background-image: url("../images/blog-bg.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  &__items {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    &::after{
+      content: '';
+      position: absolute;
+      background-image: url('../images/decor/blog-decor.svg');
+      right: -20px;
+      top: -25px;
+      z-index: -1;
+      width: 126px;
+      height: 53px;
+    }
+  }
+  &__item {
+    max-width: 370px;
+    border: 1px solid #ececec;
+    transition: all .3s;
+    &:hover {
+      box-shadow: 20px 0px 60px 0px rgba(202, 202, 202, 0.35);
+      border: none;
+      .blog__item-link{
+        color: $accent;
+        &::after{
+          background-image: url("../images/icons/arrow-accent.svg");
+        }
+      }
+    }
+  }
+  &__item-imglink {
+    display: block;
+    img {
+      height: 288px;
+      object-fit: cover;
+    }
+  }
+  &__item-box {
+    padding: 30px 40px;
+  }
+  &__item-info {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+  }
+  &__item-author,
+  &__item-date {
+    padding-left: 30px;
+    position: relative;
+    &::before {
+      content: "";
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      left: 0;
+      top: 4px;
+    }
+  }
+  &__item-author::before {
+    background-image: url("../images/icons/user-gray.svg");
+  }
+  &__item-date::before {
+    background-image: url("../images/icons/time.svg");
+  }
+  &__item-title {
+    color: $title;
+    @extend %roboto-400;
+    font-size: 22px;
+    margin-bottom: 20px;
+  }
+  &__item-link {
+    position: relative;
+    transition: all .3s;
+  }
+  &__item-link::after {
+    content: "";
+    width: 10px;
+    height: 8px;
+    background-image: url("../images/icons/arrow.svg");
+    position: absolute;
+    top: 7px;
+    right: -14px;
+  }
+}
 
 @import "media";
-
-
