--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -156,6 +156,18 @@
   }
 }
 
+.top {
+  &__container {
+    max-width: 1700px;
+    margin: 0 auto;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top center;
+    padding: 120px 0 130px;
+    text-align: center;
+  }
+}
+
 .top-slider {
   background-image: url("../images/decor/top-slider-bg.png");
   background-repeat: no-repeat;
@@ -565,10 +577,10 @@
     display: flex;
     justify-content: space-between;
     position: relative;
-    &::after{
-      content: '';
+    &::after {
+      content: "";
       position: absolute;
-      background-image: url('../images/decor/blog-decor.svg');
+      background-image: url("../images/decor/blog-decor.svg");
       right: -20px;
       top: -25px;
       z-index: -1;
@@ -579,13 +591,13 @@
   &__item {
     max-width: 370px;
     border: 1px solid #ececec;
-    transition: all .3s;
+    transition: all 0.3s;
     &:hover {
       box-shadow: 20px 0px 60px 0px rgba(202, 202, 202, 0.35);
       border: none;
-      .blog__item-link{
+      .blog__item-link {
         color: $accent;
-        &::after{
+        &::after {
           background-image: url("../images/icons/arrow-accent.svg");
         }
       }
@@ -633,7 +645,7 @@
   }
   &__item-link {
     position: relative;
-    transition: all .3s;
+    transition: all 0.3s;
   }
   &__item-link::after {
     content: "";
