--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,5 +1,5 @@
 html,
-body{
+body {
   height: 100%;
 }
 
@@ -12,7 +12,7 @@ body {
   flex-direction: column;
 }
 
-.main{
+.main {
   flex-grow: 1;
 }
 
@@ -29,7 +29,7 @@ a {
   @extend %quicksand-500;
 }
 
-.title{
+.title {
   text-align: center;
   @extend %roboto-700;
   font-size: 48px;
@@ -39,55 +39,96 @@ a {
   text-transform: uppercase;
 }
 
-.text{
+.text {
   text-align: center;
   max-width: 570px;
   margin: 0 auto 55px;
 }
 
-.breadcrumbs{
+.breadcrumbs {
   display: inline-flex;
   justify-content: center;
   padding-left: 25px;
   position: relative;
-  &::before{
-    content: '';
+  &::before {
+    content: "";
     position: absolute;
-    background-image: url('../images/icons/home-icon.svg');
+    background-image: url("../images/icons/home-icon.svg");
     width: 16px;
     height: 16px;
     left: 0;
     top: 4px;
   }
-  &__list{
+  &__list {
     display: flex;
   }
-  &__item{
+  &__item {
     color: #727272;
     padding-right: 40px;
     position: relative;
-    &::after{
-      content: '';
+    &::after {
+      content: "";
       position: absolute;
-      background-image: url('../images/icons/angle-right.svg');
+      background-image: url("../images/icons/angle-right.svg");
       width: 9px;
       height: 10px;
       right: 15px;
       top: 9px;
     }
-    &:last-child{
+    &:last-child {
       color: $accent;
       padding-right: 0;
-      &::after{
+      &::after {
         display: none;
       }
     }
   }
-  &__link{
+  &__link {
     color: inherit;
   }
 }
 
-.header--404-page{
+.header--404-page {
   background-color: $bg;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  padding: 30px 0;
+  .pagination__list {
+    display: flex;
+    padding: 0 35px;
+  }
+  &__item{
+    padding: 0 15px;
+  }
+  &__link--active{
+    color: $accent;
+  }
+  &__arrows {
+    text-transform: uppercase;
+    position: relative;
+    &::before {
+      position: absolute;
+      content: "";
+      width: 5px;
+      height: 10px;
+      top: 8px;
+    }
+  }
+  &__prev {
+    padding-left: 15px;
+    &::before{
+      background-image: url('../images/icons/angle_left.svg');
+      left: 0;
+    }
+  }
+  &__next {
+    padding-right: 15px;
+    &::before{
+      background-image: url('../images/icons/angle_right.svg');
+      right: 0;
+    }
+  }
 }
