--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -28,7 +28,15 @@ $bg: #f6f6f6;
   text-transform: uppercase;
   color: #fff;
   padding: 12px 24px;
-  letter-spacing: 1.2px;
+  letter-spacing: 2px;
   @extend %roboto-400;
   box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
+}
+
+%checkbox-hidden {
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  position: absolute;
 }
