--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -696,30 +696,6 @@
   &__item-box {
     padding: 30px 40px;
   }
-  &__item-info {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 20px;
-  }
-  &__item-author,
-  &__item-date {
-    padding-left: 30px;
-    position: relative;
-    &::before {
-      content: "";
-      position: absolute;
-      width: 20px;
-      height: 20px;
-      left: 0;
-      top: 4px;
-    }
-  }
-  &__item-author::before {
-    background-image: url("../images/icons/user-gray.svg");
-  }
-  &__item-date::before {
-    background-image: url("../images/icons/time.svg");
-  }
   &__item-title {
     color: $title;
     @extend %roboto-400;
@@ -738,6 +714,31 @@
     position: absolute;
     top: 7px;
     right: -14px;
+  }
+}
+
+.blog-box {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+  &__author,
+  &__date {
+    padding-left: 30px;
+    position: relative;
+    &::before {
+      content: "";
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      left: 0;
+      top: 4px;
+    }
+  }
+  &__author::before {
+    background-image: url("../images/icons/user-gray.svg");
+  }
+  &__date::before {
+    background-image: url("../images/icons/time.svg");
   }
 }
 
@@ -1452,24 +1453,24 @@
   &__rating {
     margin-bottom: 30px;
   }
-  &__rating-title{
+  &__rating-title {
     color: $title;
     margin-right: 60px;
   }
-  &__label{
+  &__label {
     margin-right: 25px;
   }
-  &__input{
+  &__input {
     @extend %radio-hidden;
-    &:checked + .comments-form__radio{
-      path{
+    &:checked + .comments-form__radio {
+      path {
         fill: #ffc35b;
       }
     }
   }
-  &__radio{
+  &__radio {
     cursor: pointer;
-    path{
+    path {
       fill: #d8d8d8;
     }
   }
@@ -1494,24 +1495,209 @@
     resize: none;
     margin-bottom: 40px;
   }
-  &__btn{
+  &__btn {
     border: none;
     @extend %btn;
   }
 }
 
-.related{
+.related {
   padding-bottom: 120px;
-  &__items{
+  &__items {
     margin-top: 50px;
     display: flex;
     justify-content: space-between;
   }
-  &__images{
+  &__images {
     margin-bottom: 20px;
   }
-  &__item-title{
+  &__item-title {
     padding: 10px 0;
+  }
+}
+
+.blog-page {
+  padding: 120px 0 60px;
+  &__item--slider {
+    .blog-page__item-box {
+      margin-top: -8px;
+    }
+  }
+  &__slider {
+    .slick-prev,
+    .slick-next {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      z-index: 5;
+      width: 40px;
+      height: 40px;
+      background-color: $accent;
+      box-shadow: 0px 7px 20px 0px rgba(254, 62, 87, 0.3);
+      border: none;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+      outline: none;
+      path {
+        fill: #fff;
+      }
+    }
+    .slick-disabled {
+      background-color: #fff;
+      box-shadow: 0px 7px 20px 0px rgba(168, 168, 168, 0.3);
+      path {
+        fill: $accent;
+      }
+    }
+    .slick-next {
+      right: 40px;
+    }
+    .slick-prev {
+      left: 40px;
+    }
+  }
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+  }
+  &__content {
+    width: 770px;
+    margin-right: 30px;
+  }
+  &__aside {
+    width: 370px;
+  }
+  &__item {
+    margin-bottom: 60px;
+    &.blog-page__item--no-image {
+      border-top: 1px solid #ececec;
+      box-shadow: 0px 20px 60px 0px rgba(202, 202, 202, 0.35);
+    }
+  }
+  &__item-link {
+    display: block;
+  }
+  &__img {
+    max-width: 770px;
+    height: 450px;
+    object-fit: cover;
+    display: block;
+  }
+  &__item-box {
+    padding: 40px;
+    border: 1px solid #ececec;
+    border-top: none;
+  }
+  &__item-title {
+    display: block;
+    color: $title;
+    font-size: 22px;
+    line-height: 32px;
+    @extend %roboto-700;
+    margin-bottom: 20px;
+    cursor: pointer;
+    transition: all 0.3s;
+    &:hover {
+      color: $accent;
+    }
+  }
+  .blog-box {
+    justify-content: start;
+    &__author {
+      margin-right: 30px;
+    }
+  }
+}
+
+.person {
+  border: 1px solid #ececec;
+  margin-bottom: 40px;
+  text-align: center;
+  padding: 40px 25px;
+  &__img {
+    display: inline-block;
+    width: 160px;
+    height: 160px;
+    object-fit: cover;
+    margin: 0 auto 35px;
+  }
+  &__name {
+    color: $title;
+    font-size: 18px;
+    @extend %roboto-700;
+    margin-bottom: 10px;
+  }
+  &__position {
+    color: $accent;
+    margin-bottom: 25px;
+  }
+  &__text {
+    margin-bottom: 25px;
+  }
+  &__social-link {
+    margin: 0 8px;
+    path {
+      fill: $default;
+    }
+    &:hover {
+      path {
+        fill: $accent;
+        transition: all 0.3s;
+      }
+    }
+  }
+}
+
+.latest-post {
+  padding: 35px 30px 40px;
+  border: 1px solid #ececec;
+  margin-bottom: 40px;
+  &__title {
+    color: $title;
+    text-transform: uppercase;
+    @extend %roboto-400;
+    font-size: 22px;
+    margin-bottom: 35px;
+  }
+  &__item {
+    margin-bottom: 20px;
+    display: flex;
+    & + .latest-post__item {
+      border-top: 1px solid #ececec;
+      padding-top: 20px;
+    }
+  }
+  &__img-link{
+    display: block;
+    margin-right: 20px;
+    min-width: 80px;
+  }
+  &__img{
+    width: 80px;
+    height: 80px;
+    object-fit: cover;
+  }
+  &__box-title{
+    @extend %roboto-400;
+    font-size: 18px;
+    line-height: 28px;
+    color: $title;
+  }
+  &__date{
+    padding-left: 26px;
+    position: relative;
+    &::before{
+      content: '';
+      position: absolute;
+      background-image: url('../images/icons/calendar.svg');
+      width: 16px;
+      height: 16px;
+      left: 0;
+      top: 5px;
+    }
   }
 }
 
