--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1670,35 +1670,169 @@
       padding-top: 20px;
     }
   }
-  &__img-link{
+  &__img-link {
     display: block;
     margin-right: 20px;
     min-width: 80px;
   }
-  &__img{
+  &__img {
     width: 80px;
     height: 80px;
     object-fit: cover;
   }
-  &__box-title{
+  &__box-title {
     @extend %roboto-400;
     font-size: 18px;
     line-height: 28px;
     color: $title;
   }
-  &__date{
+  &__date {
     padding-left: 26px;
     position: relative;
-    &::before{
-      content: '';
+    &::before {
+      content: "";
       position: absolute;
-      background-image: url('../images/icons/calendar.svg');
+      background-image: url("../images/icons/calendar.svg");
       width: 16px;
       height: 16px;
       left: 0;
       top: 5px;
     }
   }
+}
+
+.blog-one {
+  &__text {
+    border: 1px solid #ececec;
+    border-top: none;
+    padding: 30px;
+    margin-top: -1px;
+    h4 {
+      color: $title;
+      @extend %roboto-700;
+      font-size: 22px;
+      margin: 25px 0;
+    }
+    p {
+      margin: 25px 0;
+    }
+    blockquote {
+      background-color: $bg;
+      border-left: 3px solid $accent;
+      color: $title;
+      @extend %roboto-400;
+      font-size: 22px;
+      line-height: 32px;
+      margin: 25px 0;
+      padding: 35px;
+    }
+  }
+  &__left-img {
+    float: left;
+    margin-right: 30px;
+    margin-bottom: 10px;
+  }
+  &__right-img {
+    float: right;
+    margin-left: 30px;
+    margin-bottom: 10px;
+  }
+  &__info {
+    display: flex;
+    margin-bottom: 25px;
+  }
+  &__info-link {
+    margin-right: 30px;
+    padding-left: 28px;
+    position: relative;
+    &::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 0;
+      background-image: url("../images/icons/calendar.svg");
+      width: 16px;
+      height: 16px;
+    }
+  }
+  &__info-link--comment::before {
+    background-image: url("../images/icons/comment.svg");
+    top: 3px;
+  }
+  &__info-link--author::before {
+    background-image: url("../images/icons/user-accent.svg");
+  }
+  &__form-title {
+    padding-top: 35px;
+    margin-bottom: 25px;
+    border-top: 1px solid #ececec;
+    text-transform: uppercase;
+    color: $title;
+    font-size: 24px;
+    @extend %roboto-700;
+  }
+  .comments-form {
+    border-bottom: none;
+  }
+  &__box {
+    margin: 25px 0 35px;
+    display: flex;
+    justify-content: space-between;
+  }
+  &__tags,
+  &__share {
+    span {
+      text-transform: uppercase;
+      color: $title;
+      margin-right: 7px;
+      @extend %roboto-700;
+    }
+  }
+  &__share {
+    a {
+      margin-right: 12px;
+      vertical-align: middle;
+      transition: all 0.3s;
+      &:hover {
+        path {
+          fill: $accent;
+        }
+      }
+      path {
+        fill: $default;
+      }
+    }
+  }
+  &__author {
+    border-bottom: 1px solid #ececec;
+    padding-bottom: 40px;
+    margin-bottom: 40px;
+    display: flex;
+  }
+  &__author-img {
+    width: 140px;
+    height: 140px;
+    object-fit: cover;
+    margin-right: 30px;
+  }
+  &__author-name {
+    text-transform: uppercase;
+    color: $title;
+    @extend %roboto-700;
+    font-size: 22px;
+    margin-bottom: 24px;
+  }
+  .comments-form__text-input {
+    width: 370px;
+  }
+}
+
+.comments-titile {
+  text-transform: uppercase;
+  color: $title;
+  @extend %roboto-700;
+  font-size: 24px;
+  margin-bottom: 25px;
 }
 
 @import "media";
