--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1835,4 +1835,111 @@
   margin-bottom: 25px;
 }
 
+.map {
+  padding: 120px 0;
+}
+
+#map {
+  width: 100%;
+  height: 450px;
+}
+
+.contact {
+  padding-bottom: 120px;
+  &__inner {
+    display: flex;
+  }
+  &__info {
+    max-width: 370px;
+    margin-right: 30px;
+  }
+  &__info-title {
+    color: $title;
+    @extend %roboto-700;
+    font-size: 48px;
+    line-height: 58px;
+    margin-bottom: 20px;
+  }
+  &__info-text {
+    margin-bottom: 60px;
+  }
+  &__info-item {
+    color: $title;
+    padding-left: 80px;
+    margin-top: 55px;
+    position: relative;
+    &::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: -5px;
+      width: 60px;
+      height: 60px;
+      background-color: #fff;
+      box-shadow: 0px 5px 20px 0px rgba(146, 146, 146, 0.3);
+    }
+    &::after {
+      content: "";
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      left: 20px;
+      top: 15px;
+      background-image: url("../images/icons/phone-icon.svg");
+    }
+  }
+  &__info-item--location::after {
+    width: 14px;
+    left: 23px;
+    background-image: url("../images/icons/location-icon.svg");
+  }
+  &__info-item--email::after {
+    width: 18px;
+    left: 21px;
+    background-image: url("../images/icons/mail-icon.svg");
+  }
+  &__info-phone {
+    display: block;
+    color: $title;
+  }
+  &__form {
+    width: 100%;
+    padding: 60px 40px;
+    background-color: #fff;
+    box-shadow: 0px 5px 20px 0px rgba(146, 146, 146, 0.3);
+  }
+  &__form-title {
+    color: $title;
+    font-size: 22px;
+    margin-bottom: 20px;
+    @extend %roboto-700;
+  }
+  &__form-input,
+  &__form-textarea {
+    width: 100%;
+    display: block;
+    height: 60px;
+    background-color: $bg;
+    border: none;
+    padding: 0 24px;
+    margin-bottom: 30px;
+  }
+  &__form-textarea {
+    padding-top: 24px;
+    resize: none;
+    height: 200px;
+  }
+  &__form-box {
+    display: flex;
+    justify-content: space-between;
+    input {
+      width: 330px;
+    }
+  }
+  &__form-btn{
+    @extend %btn;
+    border: none;
+  }
+}
+
 @import "media";
