--- a/app/module/_partners/_partners.scss
+++ b/app/module/_partners/_partners.scss
@@ -7,3 +7,17 @@
     align-items: center;
   }
 }
+
+@media (max-width: 620px) {
+  .partners {
+    padding: 50px 0;
+    &__list {
+      flex-wrap: wrap;
+      justify-content: center;
+      height: auto;
+    }
+    &__item{
+      margin: 20px 35px;
+    }
+  }
+}
