--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -50,6 +50,7 @@ a {
   justify-content: center;
   padding-left: 25px;
   position: relative;
+  flex-wrap: wrap;
   &::before {
     content: "";
     position: absolute;
@@ -100,10 +101,10 @@ a {
     display: flex;
     padding: 0 35px;
   }
-  &__item{
+  &__item {
     padding: 0 15px;
   }
-  &__link--active{
+  &__link--active {
     color: $accent;
   }
   &__arrows {
@@ -119,16 +120,30 @@ a {
   }
   &__prev {
     padding-left: 15px;
-    &::before{
-      background-image: url('../images/icons/angle_left.svg');
+    &::before {
+      background-image: url("../images/icons/angle_left.svg");
       left: 0;
     }
   }
   &__next {
     padding-right: 15px;
-    &::before{
-      background-image: url('../images/icons/angle_right.svg');
+    &::before {
+      background-image: url("../images/icons/angle_right.svg");
       right: 0;
     }
+  }
+}
+
+@media (max-width: 620px) {
+  .title {
+    font-size: 40px;
+    line-height: 48px;
+  }
+}
+
+@media (max-width: 375px) {
+  .title {
+    font-size: 32px;
+    line-height: 40px;
   }
 }
