--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,10 +4,6 @@
 @import "libs";
 @import "global";
 
-
-
-
-
 .page-404 {
   padding: 110px 0 120px;
   &__inner {
@@ -21,6 +17,7 @@
   }
   &__title {
     font-size: 48px;
+    line-height: 52px;
     @extend %roboto-700;
     color: #28384f;
     margin-bottom: 40px;
@@ -42,6 +39,19 @@
   &__filters {
     width: 370px;
     margin-right: 30px;
+  }
+  &__filters-btn{
+    display: none;
+    background-color: transparent;
+    border: none;
+    position: fixed;
+    right: 0;
+    z-index: 101;
+    padding-right: 15px;
+    bottom: 50px;
+      img{
+        width: 40px;
+      }
   }
 }
 
@@ -554,6 +564,7 @@
     padding: 4px 12px;
     border: 1px solid #ececec;
     display: inline-block;
+    cursor: pointer;
   }
 }
 
@@ -718,6 +729,7 @@
     margin-top: 50px;
     display: flex;
     justify-content: space-between;
+    grid-gap: 30px;
   }
   &__images {
     margin-bottom: 20px;
@@ -1033,9 +1045,9 @@
     font-size: 22px;
     margin-bottom: 24px;
   }
-  .comments-form__text-input {
-    width: 370px;
-  }
+  // .comments-form__text-input {
+  //   width: 370px;
+  // }
 }
 
 .comments-titile {
@@ -1147,7 +1159,7 @@
       width: 330px;
     }
   }
-  &__form-btn{
+  &__form-btn {
     @extend %btn;
     border: none;
   }
