--- a/app/shop.njk
+++ b/app/shop.njk
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MARCHO</title>
     <link rel="stylesheet" href="css/shop.min.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
 
   <body>
@@ -16,6 +17,9 @@
       <section class="shop">
         <div class="container">
           <div class="shop__inner">
+            <button class="shop__filters-btn">
+              <img src="images/icons/filter-solid.svg" alt="">
+            </button>
             <div class="shop__filters filter">
               <div class="filter__item filter-search">
                 <h3 class="filter__title">Search</h3>
